# mcp-nettools

./: .gitignore  README.md  client_example.py  nettools_mcp.py  pyproject.toml  requirements.txt
examples/: client_example.py
mcp_nettools/: __init__.py  cli.py  server.py
tests/: test_basic.py
