[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-nettools"
version = "0.1.0"
description = "A Model Context Protocol implementation providing network diagnostics and scanning tools"
readme = "README.md"
authors = [
    {name = "Dennis Kruyt", email = "dennis@kruyt.org"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.2.0",
    "python-nmap>=0.7.1",
    "dnspython>=2.2.1",
    "python-whois>=0.8.0",
    "requests>=2.28.1",
    "ipaddress>=1.0.23",
    "geoip2>=4.6.0",
    "sslyze>=5.1.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.21.1",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-nettools = "mcp_nettools.cli:main"